--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.aerospike</groupId>
   <artifactId>aerospike-client</artifactId>
-  <version>3.1.5-santa-SNAPSHOT</version>
+  <version>3.1.5</version>
   <packaging>jar</packaging>
 
   <name>aerospike-client</name>
@@ -26,6 +26,12 @@
       <groupId>org.mindrot</groupId>
       <artifactId>jbcrypt</artifactId>
       <version>0.3m</version>
+    </dependency>
+  
+     <dependency> 
+      <groupId>com.codahale.metrics</groupId>
+      <artifactId>metrics-core</artifactId>
+      <version>3.0.2</version>
     </dependency>
   </dependencies>
     
